IMPALA-2788: conv(bigint num, int from_base, int to_base) returns wrong result

For very large value of 'num', conv(bigint num, int from_base, int to_base)
function returns incorrect results, due to overflow of 'place' variable

Change-Id: Ie9d063fe28e331229da25c45d7731f07e4f383f0
Reviewed-on: http://gerrit.cloudera.org:8080/2027
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Internal Jenkins